<resources>
    <string name="app_name">1С Аренда</string>
    <string name="personal_information">Личная информация</string>
    <string name="rent">Аренда</string>
    <string name="stations">Станции</string>
    <string name="history">История</string>
    <string name="feedback_and_faq">Обратная связь и FAQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Фото:</string>
    <string name="status">Статус:</string>
    <string name="discount">Скидка:</string>
    <string name="first_name">Имя:</string>
    <string name="middle_name">Отчество:</string>
    <string name="sex">Пол:</string>
    <string name="date_of_birth">Дата рождения:</string>
    <string name="email">Почта:</string>
    <string name="last_name">Фамилия:</string>
    <string name="edit">Редактировать</string>
    <string name="start_rent">Начать аренду</string>
    <string name="stop_rent">Завершить аренду</string>
    <string name="at">\@</string>
    <string name="phone">Телефон:</string>
    <string name="pick_date">Выбрать дату рождения</string>
    <string name="save">Сохранить</string>
    <string name="balance">Баланс:</string>
    <string name="ask_question">Написать вопрос/предложение</string>
    <string name="faq">Частые вопросы и ответы</string>
    <string name="feedback">Обратная связь</string>
    <string name="enter_vendor_code">Введите артикул</string>
    <string name="scan_qr_code">Отсканировать QR-код</string>
    <string name="ready">Готово</string>
    <string name="confirm_dialog_tag">confirm_dialog_tag</string>
    <string name="vc_not_found">Товар не найден</string>
    <string name="confirm_rent">Взять товар в аренду?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="put">Положили: "</string>
    <string name="took">Взяли: "</string>
    <string name="rent_time">"Время аренды: "</string>
    <string name="in_rent">В аренде</string>
    <string name="photo_to_stop_rent">Для завершения аренды нужно сделать фото товара!</string>
    <string name="take_photo">Сделать фото</string>
    <string name="cancel_rent">Отменить завершение аренды</string>
    <string name="rent_stop">Завершение аренды</string>
    <string name="take_new_photo">Сделать новое фото</string>
    <string name="cancel_stopping_rent">Отменить завершение аренды</string>
</resources>