<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_information"
            android:title="@string/personal_information" />
        <item
            android:id="@+id/nav_rent"
            android:title="@string/rent" />
        <item
            android:id="@+id/nav_stations"
            android:title="@string/stations" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_feedback_and_faq"
            android:title="@string/feedback_and_faq" />
    </group>
</menu>