<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.StopRentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_new_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_new_photo"
            android:layout_marginBottom="6dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop_rent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_rent"
            android:layout_marginBottom="6dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_stopping_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_stopping_rent"
            android:layout_marginBottom="6dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:scaleType="fitStart" />
    </LinearLayout>
</ScrollView>
